--- a/src/components/organisms/splash.astro
+++ b/src/components/organisms/splash.astro
@@ -1,9 +1,9 @@
 ---
-import HeroImage from "~/components/atoms/hero-image.astro";
-import ScheduleTemplate from "~/components/molecules/schedule.svelte";
-import Contact from "../molecules/contact.svelte";
+import HeroImage from "~/components/atoms/HeroImage.astro";
+import ScheduleTemplate from "~/components/molecules/Schedule.svelte";
+import Contact from "~/components/molecules/Contact.svelte";
 import { schedule } from "~/constants/schedule";
-import FindUs from "../molecules/find-us.svelte";
+import FindUs from "~/components/molecules/FindUs.svelte";
 ---
 
 <section class="relative h-full bg-black py-32">
