--- a/src/components/organisms/services.astro
+++ b/src/components/organisms/services.astro
@@ -1,46 +1,40 @@
 ---
 import { Icon } from "astro-icon";
-import ContentSection from "~/components/molecules/content-section.astro";
+import ContentSection from "~/components/molecules/ContentSection.astro";
 import type { Service } from "~/types";
 
 const services: Array<Service> = [
   {
-    title: "Stylisme sur mesure",
-    description:
-      "Notre équipe de stylistes experts se dédie à créer des coiffures personnalisées, conçues pour correspondre parfaitement à votre style unique.",
-    icon: "mdi:scissors",
-  },
-  {
     title: "Excellence des produits français",
     description:
-      "Optez pour l'excellence avec l'utilisation exclusive de produits capillaires français de première qualité, assurant des résultats exceptionnels.",
+      "Dans notre salon, l'authenticité règne. Des produits français de qualité dans une atmosphère chaleureuse, pour une expérience locale.",
     icon: "openmoji:flag-france",
   },
   {
-    title: "Consultation experte",
+    title: "En toute amitié",
     description:
-      "Bénéficiez de consultations personnalisées, offrant des conseils pointus sur les soins capillaires et les dernières tendances.",
-    icon: "mdi:lightbulb-on",
+      "Des coupes qui riment avec convivialité. On travaille sur votre style dans une ambiance amicale et détendue.",
+    icon: "mdi:account-group",
   },
   {
-    title: "Ambiance raffinée",
+    title: "Ambiance conviviale près de chez vous ",
     description:
-      "Plongez dans une expérience de salon raffinée où notre service professionnel assure une détente totale et une satisfaction assurée.",
+      "Offrez-vous une pause bien-être sans aller loin. Des soins de qualité, à deux pas de chez vous.",
     icon: "mdi:coffee",
   },
 ];
 ---
 
-<ContentSection
-  title="Services"
-  id="services"
-  classes="bg-offset"
-  textColor="text-offset"
->
+<ContentSection id="services" classes="bg-offset">
+  <Fragment slot="title">
+    <h2 class=`text-center font-extrabold tracking-tight text-6xl text-offset`>
+      Services
+    </h2>
+  </Fragment>
   <ul class="grid max-w-6xl grid-cols-1 md:grid-cols-2">
     {
-      services.map(({ title, description, icon }) => (
-        <li class="flex flex-col items-center gap-4 p-6">
+      services.map(({ title, description, icon }, i ) => (
+        <li class=`flex flex-col items-center gap-4 p-6 ${services.length % 2 !== 0 && i === services.length -1 ? "sm:col-span-2 sm:mx-auto" : ""}`>
           <div class="h-24 w-24 rounded-full border-2 border-offset p-3">
             <Icon name={icon} class="text-offset" />
           </div>
