--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
-import Link from "~/components/atoms/link.svelte";
-import Layout from "~/components/organisms/layout/layout.astro";
+import Link from "~/components/atoms/Link.svelte";
+import Layout from "~/components/organisms/layout/Layout.astro";
 export const prerender = true;
 ---
 
