feat: add under construction page

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,7 @@
 import Link from "~/components/atoms/Link.svelte";
 import Layout from "~/components/organisms/layout/Layout.astro";
 export const prerender = true;
+return Astro.redirect("/incoming");
 ---
 
 <Layout>
