chore: fix link path

--- a/src/components/organisms/Products.astro
+++ b/src/components/organisms/Products.astro
@@ -4,8 +4,7 @@ import ContentSection from "~/components/molecules/ContentSection.astro";
 
 import loreal from "~/assets/products/loreal.png";
 import ghd from "~/assets/products/ghd.png";
-import Link from "../atoms/Link.svelte";
-import Share from "../molecules/share.svelte";
+import Link from "~/components/atoms/Link.svelte";
 
 const products = [
   {
