chore: rename files

--- a/src/components/organisms/Footer1.astro
+++ b/src/components/organisms/Footer1.astro
@@ -1,7 +1,7 @@
 ---
 import type { FooterLink } from "~/types";
-import SocialList from "~/components/molecules/SocialList.astro";
-import Link from "~/components/atoms/Link.svelte";
+import SocialList from "~/components/molecules/SocialList1.astro";
+import Link from "~/components/atoms/Link1.svelte";
 
 import { social } from "~/constants/social";
 const links: Array<FooterLink> = [
