--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import Link from "~/components/atoms/Link.svelte";
+import Link from "~/components/atoms/Link1.svelte";
 import Layout from "~/components/organisms/layout/Layout.astro";
 export const prerender = true;
 return Astro.redirect("/incoming");
