--- a/src/components/molecules/SocialLoop1.astro
+++ b/src/components/molecules/SocialLoop1.astro
@@ -1,7 +1,7 @@
 ---
 import type { FooterLink } from "~/types";
 import { Icon } from "astro-icon";
-import Link from "~/components/atoms/Link.svelte";
+import Link from "~/components/atoms/Link1.svelte";
 interface Props {
   links: Array<FooterLink>;
 }
