ci: linux file paths

--- a/src/components/organisms/Header.astro
+++ b/src/components/organisms/Header.astro
@@ -1,11 +1,11 @@
 ---
 import { Icon } from "astro-icon";
-import ThemeSwitcher from "~/components/atoms/ThemeSwitcher1.astro";
+import ThemeSwitcher from "~/components/atoms/ThemeSwitcher.astro";
 import type { FooterLink, NavItem } from "~/types";
-import SocialList from "~/components/molecules/SocialList1.astro";
-import Social from "~/components/molecules/SocialLoop1.astro";
+import SocialList from "~/components/molecules/SocialList.astro";
+import Social from "~/components/molecules/SocialLoop.astro";
 import { social } from "~/constants/social";
-import Share from "../molecules/Share1.svelte";
+import Share from "../molecules/Share.svelte";
 const navItems: Array<NavItem> = [
   { title: "Contact", url: "/#contact" },
   { title: "Galerie", url: "/gallery#pics" },
