--- a/src/components/organisms/Products.astro
+++ b/src/components/organisms/Products.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
-import ContentSection from "~/components/molecules/ContentSection1.astro";
+import ContentSection from "~/components/molecules/ContentSection.astro";
 
 import loreal from "~/assets/products/loreal.png";
 import ghd from "~/assets/products/ghd.png";
-import Link from "~/components/atoms/Link1.svelte";
+import Link from "~/components/atoms/Link.svelte";
 
 const products = [
   {
