--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource-variable/inter";
 import Countdown from "~/components/atoms/Countdown.svelte";
+import Footer from "~/components/organisms/Footer.astro";
 import { seo } from "~/constants/seo";
 import { social } from "~/constants/social";
 import "~/styles/index.css";
@@ -67,8 +68,36 @@ const schema = JSON.stringify(
     <h1 class="font-bold text-2xl">On arrive bientôt !</h1>
     <p class="mt-4 text-lg">On travaille sur quelque chose d'incroyable !</p>
 
-    <div class="mt-8">
-      <Countdown client:load />
+    <div class="mt-8 flex flex-col">
+      <form
+        action="#"
+        method="post"
+        class="flex items-center justify-center"
+        data-netlify="true"
+        netlify-honeypot="bot-field"
+      >
+        <input
+          type="email"
+          name="email"
+          placeholder="Entrez votre email"
+          class="rounded-l-md border bg-white px-4 py-2 text-black placeholder-gray-400 text-xs focus:outline-none"
+          required
+        />
+        <input class="hidden" name="anti-bot" />
+        <button
+          type="submit"
+          class="rounded-r-md border bg-primary px-4 py-2 text-white hover:bg-accent focus:outline-none"
+          >S'inscrire</button
+        >
+      </form>
     </div>
+    <p class="mt-2 text-sm">
+      Soyez les premiers à être informés de notre lancement !
+    </p>
   </body>
+  <Countdown client:load />
+  <footer class="absolute bottom-0 flex w-full flex-col bg-black p-2 text-xs">
+    SC Coiffure © 2023
+    <a href="mailto:contact@sccoiffure83.fr">contact@sccoiffure83.fr</a>
+  </footer>
 </html>
