--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -1,7 +1,7 @@
 ---
 import "@fontsource-variable/inter";
+import Icon from "astro-icon";
 import Countdown from "~/components/atoms/Countdown.svelte";
-import Footer from "~/components/organisms/Footer.astro";
 import { seo } from "~/constants/seo";
 import { social } from "~/constants/social";
 import "~/styles/index.css";
@@ -19,7 +19,7 @@ const {
 const { generator, site, url } = Astro;
 
 const image = new URL("social.jpg", site);
-const canonical = new URL(url.pathname, site);
+const canonical = new URL('',site);
 
 const schema = JSON.stringify(
   {
@@ -40,7 +40,7 @@ const schema = JSON.stringify(
 <html
   lang="fr"
   class="h-full font-display motion-safe:scroll-smooth"
-  data-theme="dark"
+  data-theme="light"
 >
   <head>
     <meta charset="utf-8" />
@@ -53,7 +53,6 @@ const schema = JSON.stringify(
     <meta name="description" content={description} />
     <link rel="canonical" href={canonical} />
 
-    <!-- social media -->
     <meta property="og:title" content={title} />
     <meta property="og:type" content="website" />
     <meta property="og:description" content={description} />
@@ -63,30 +62,31 @@ const schema = JSON.stringify(
     <script type="application/ld+json" set:html={schema} />
   </head>
   <body
-    class="flex h-screen flex-col items-center justify-center bg-primary text-center font-display text-white"
+    class="flex h-screen flex-col items-center justify-center bg-default px-6 text-center font-display text-default"
   >
+    <Icon name="logomark" class="h-32 text-secondary" />
     <h1 class="font-bold text-2xl">On arrive bientôt !</h1>
     <p class="mt-4 text-lg">On travaille sur quelque chose d'incroyable !</p>
 
-    <div class="mt-8 flex flex-col">
+    <div class="mt-8 flex w-full flex-col">
       <form
-        action="#"
-        method="post"
-        class="flex items-center justify-center"
-        data-netlify="true"
-        netlify-honeypot="bot-field"
+        name="contact"
+        class="m-auto flex w-full flex-col items-center justify-center gap-2 px-4 sm:max-w-md sm:flex-row sm:gap-0"
+        data-netlify='true"'
+        netlify-honeypot="anti-bot"
       >
+        <input class="hidden" name="anti-bot" />
         <input
           type="email"
           name="email"
           placeholder="Entrez votre email"
-          class="rounded-l-md border bg-white px-4 py-2 text-black placeholder-gray-400 text-xs focus:outline-none"
+          class="w-full rounded-md border bg-white px-4 py-2 text-black placeholder-gray-400 text-xs focus:outline-none sm:rounded-r-none"
           required
         />
-        <input class="hidden" name="anti-bot" />
+
         <button
           type="submit"
-          class="rounded-r-md border bg-primary px-4 py-2 text-white hover:bg-accent focus:outline-none"
+          class="w-md m-auto rounded-md border bg-primary px-4 py-2 text-white hover:bg-accent focus:outline-none sm:w-auto sm:rounded-l-none"
           >S'inscrire</button
         >
       </form>
@@ -96,7 +96,9 @@ const schema = JSON.stringify(
     </p>
   </body>
   <Countdown client:load />
-  <footer class="absolute bottom-0 flex w-full flex-col bg-black p-2 text-xs">
+  <footer
+    class="absolute bottom-0 flex w-full flex-col bg-black p-2 text-white text-xs"
+  >
     SC Coiffure © 2023
     <a href="mailto:contact@sccoiffure83.fr">contact@sccoiffure83.fr</a>
   </footer>
