--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -64,7 +64,7 @@ const schema = JSON.stringify(
   <body
     class="flex h-screen flex-col items-center justify-center bg-default px-6 text-center font-display text-default"
   >
-    <Icon name="logomark" class="h-32 text-secondary" />
+    <Icon name="logomark" class="mb-12 h-32 text-secondary" />
     <h1 class="font-bold text-2xl">On arrive bientôt !</h1>
     <p class="mt-4 text-lg">On travaille sur quelque chose d'incroyable !</p>
 
