fix: netlify form

--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -72,8 +72,9 @@ const schema = JSON.stringify(
       <form
         name="contact"
         class="m-auto flex w-full flex-col items-center justify-center gap-2 px-4 sm:max-w-md sm:flex-row sm:gap-0"
-        data-netlify="true"
         netlify-honeypot="anti-bot"
+        method="POST"
+        data-netlify="true"
       >
         <input class="hidden" name="anti-bot" />
         <input
