--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -91,6 +91,16 @@ const schema = JSON.stringify(
           >S'inscrire</button
         >
       </form>
+
+      <form name="contact2" method="POST" data-netlify="true">
+        <p>
+          <label>Your Name: <input type="text" name="name" /></label>
+        </p>
+
+        <p>
+          <button type="submit">Send</button>
+        </p>
+      </form>
     </div>
     <p class="mt-2 text-sm">
       Soyez les premiers à être informés de notre lancement !
