--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -34,6 +34,7 @@ const schema = JSON.stringify(
   null,
   2
 );
+export const prererender = true;
 ---
 
 <!DOCTYPE html>
@@ -90,16 +91,6 @@ const schema = JSON.stringify(
           class="w-md m-auto rounded-md border bg-primary px-4 py-2 text-white hover:bg-accent focus:outline-none sm:w-auto sm:rounded-l-none"
           >S'inscrire</button
         >
-      </form>
-
-      <form name="contact2" method="POST" data-netlify="true">
-        <p>
-          <label>Your Name: <input type="text" name="name" /></label>
-        </p>
-
-        <p>
-          <button type="submit">Send</button>
-        </p>
       </form>
     </div>
     <p class="mt-2 text-sm">
