--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -34,7 +34,7 @@ const schema = JSON.stringify(
   null,
   2
 );
-export const prererender = true;
+export const prerender = true;
 ---
 
 <!DOCTYPE html>
@@ -65,11 +65,11 @@ export const prererender = true;
   <body
     class="flex h-screen flex-col items-center justify-center bg-default px-6 text-center font-display text-default"
   >
-    <Icon name="logomark" class="mb-12 h-32 text-secondary" />
+    <Icon name="logomark" class="mb-8 h-32 text-secondary" />
     <h1 class="font-bold text-2xl">On arrive bientôt !</h1>
-    <p class="mt-4 text-lg">On travaille sur quelque chose d'incroyable !</p>
+    <p class="mt-2 text-lg">On travaille sur quelque chose d'incroyable !</p>
 
-    <div class="mt-8 flex w-full flex-col">
+    <div class="mt-4 flex w-full flex-col">
       <form
         class="m-auto flex w-full flex-col items-center justify-center gap-2 px-4 sm:max-w-md sm:flex-row sm:gap-0"
         netlify-honeypot="anti-bot"
