fix: form action

--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -75,6 +75,7 @@ export const prerender = true;
         netlify-honeypot="anti-bot"
         method="POST"
         data-netlify="true"
+        action="#"
       >
         <input class="hidden" name="anti-bot" />
         <input type="hidden" name="form-name" value="contact" />
