--- a/src/pages/incoming.astro
+++ b/src/pages/incoming.astro
@@ -40,7 +40,7 @@ export const prerender = true;
 <!DOCTYPE html>
 <html
   lang="fr"
-  class="h-full font-display motion-safe:scroll-smooth"
+  class="font-display motion-safe:scroll-smooth"
   data-theme="light"
 >
   <head>
@@ -81,21 +81,22 @@ export const prerender = true;
     document.querySelector("form")?.addEventListener("submit", handleSubmit);
   </script>
   <body
-    class="flex h-screen flex-col items-center justify-center bg-default px-6 text-center font-display text-default"
+    class="relative flex h-screen w-screen flex-col justify-center bg-default text-center font-display text-default"
   >
-    <Icon name="logomark" class="mb-8 h-32 text-secondary" />
+    <Icon name="logomark" class="mb-12 h-32 text-secondary" />
     <h1 class="font-bold text-2xl">On arrive bientôt !</h1>
     <p class="mt-2 text-lg">On travaille sur quelque chose d'incroyable !</p>
 
-    <div class="mt-4 flex w-full flex-col">
+    <div class="mt-4 flex w-full flex-col px-4">
       <form
-        class="m-auto flex w-full flex-col items-center justify-center gap-2 px-4 sm:max-w-md sm:flex-row sm:gap-0"
+        class="m-auto flex w-full flex-col items-center justify-center gap-2 sm:max-w-md sm:flex-row sm:gap-0"
         name="contact"
         method="POST"
         data-netlify="true"
-        netlify-honeypot="anti-bot"
+        netlify-honeypot="ilovehoney"
       >
-        <input class="hidden" name="anti-bot" />
+        <input type="hidden" name="form-name" value="contact" />
+        <input class="hidden" name="ilovehoney" type="text" />
         <input
           type="email"
           name="email"
@@ -110,16 +111,16 @@ export const prerender = true;
           >S'inscrire</button
         >
       </form>
+      <p class="mt-2 text-sm">
+        Soyez les premiers à être informés de notre lancement !
+      </p>
     </div>
-    <p class="mt-2 text-sm">
-      Soyez les premiers à être informés de notre lancement !
-    </p>
+    <div class="mx-auto mt-4"><Countdown client:idle /></div>
+    <footer
+      class="absolute bottom-0 flex w-full flex-col bg-black p-2 text-white text-xs"
+    >
+      SC Coiffure © 2023
+      <a href="mailto:contact@sccoiffure83.fr">contact@sccoiffure83.fr</a>
+    </footer>
   </body>
-  <Countdown client:load />
-  <footer
-    class="absolute bottom-0 flex w-full flex-col bg-black p-2 text-white text-xs"
-  >
-    SC Coiffure © 2023
-    <a href="mailto:contact@sccoiffure83.fr">contact@sccoiffure83.fr</a>
-  </footer>
 </html>
