--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,3 @@
-@import "global.css";
-@import "theme.css";
-@import "fonts.css";
+@import 'global.css';
+@import 'theme.css';
+@import 'fonts.css';
