--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,17 @@
 ---
 import "@fontsource-variable/inter";
-import Services from "~/components/organisms/services.astro";
-import Intro from "~/components/organisms/intro.astro";
-import Layout from "~/components/organisms/layout/layout.astro";
-import Team from "~/components/organisms/team.astro";
+import Services from "~/components/organisms/Services.astro";
+import Intro from "~/components/organisms/Intro.astro";
+import Layout from "~/components/organisms/layout/Layout.astro";
 import "~/styles/index.css";
-export const prerender = true;
+import Reviews from "~/components/organisms/Reviews.astro";
+import Products from "~/components/organisms/Products.astro";
+export const prerender = false;
 ---
 
 <Layout>
   <Intro />
   <Services />
-  <Team />
+  <Products />
+  <Reviews />
 </Layout>
