--- a/src/styles/md.css
+++ b/src/styles/md.css
@@ -4,47 +4,50 @@ body {
   @apply font-sans;
 }
 
+.md {
+  @apply px-4 py-8 sm:px-10;
+}
 /* Typography Styles */
-#content > h1,
-#content > h2,
-#content > h3,
-#content > h4,
-#content > h5,
-#content > h6 {
+.md h1,
+.md h2,
+.md h3,
+.md h4,
+.md h5,
+.md h6 {
   font-weight: bold;
 }
 
-#content > p {
+.md p {
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 20px;
 }
 
 /* Links */
-#content > a {
+.md a {
   color: #3490dc;
   text-decoration: underline;
   transition: color 0.3s ease-in-out;
 }
 
-#content > a:hover {
+.md a:hover {
   color: #1e70b8;
 }
 
 /* Lists */
-#content > ul,
-#content > ol {
+.md ul,
+.md ol {
   margin-bottom: 20px;
   @apply flex list-inside flex-col gap-4;
 }
 
-#content > li {
+.md li {
   font-size: 16px;
   line-height: 1.5;
 }
 
 /* Code Blocks */
-#content > pre {
+.md pre {
   background-color: #f6f8fa;
   border-radius: 4px;
   padding: 1em;
@@ -52,27 +55,27 @@ body {
   margin-bottom: 20px;
 }
 
-#content > code {
-  font-family: "Fira Code", monospace;
+.md code {
+  font-family: 'Fira Code', monospace;
   font-size: 14px;
 }
 
 /* Blockquote */
-#content > blockquote {
+.md blockquote {
   border-left: 4px solid #3490dc;
   padding-left: 20px;
   margin: 0 0 20px;
 }
 
 /* Tables */
-#content > table {
+.md table {
   width: 100%;
   margin-bottom: 20px;
   border-collapse: collapse;
 }
 
-#content > th,
-#content > td {
+.md th,
+.md td {
   border: 1px solid #e2e8f0;
   padding: 8px;
   text-align: left;
